# "ChangeLog"

2012-09-05	David Fang		<fangism@users.sourceforge.net>
	Show/report count using perceived_deck_state.
	Bookmark using perceived_deck_state.
	Moved counter outside of deck_state.
	Factor out counter_base from counter.

2012-08-22	David Fang		<fangism@users.sourceforge.net>
	Move player_options from bookmark into struct hand.
	Fixes failure to prompt with split option on T,T.
	Dealing player hand now uses action_masks on each taken action.

2012-08-17	David Fang		<fangism@users.sourceforge.net>
	Use outcome and action enums as indices to arrays and bitfields, 
		for ease of sane maintenance.

2012-05-13	David Fang		<fangism@users.sourceforge.net>
	Restructure strategy to calculate per dealer-reveal card.
	This will allow for incremental computation.

2012-04-09	David Fang		<fangism@users.sourceforge.net>
	Added precision control for numerical output, 
		made more consistent by default now.

2012-04-08	David Fang		<fangism@users.sourceforge.net>
	Added option to quiz the user on count periodically,
		or prior to shuffle.

2012-04-08	David Fang		<fangism@users.sourceforge.net>
	Generalized count into a user-definable counter structure,
		defined by integer coefficients.

2012-04-07	David Fang		<fangism@users.sourceforge.net>
	Track wrong decisions relative to basic/dynamic strategy.

2012-04-05	David Fang		<fangism@users.sourceforge.net>
	Accumulate basic/dynamic strategy edges, both a priori (before hand
		is dealt), and a posteriori (after seeing initial deal).
		The purpose is to tell how lucky your initial hands are.

2012-04-04	David Fang		<fangism@users.sourceforge.net>
	Option to show count with edges when dynamic != basic.

2012-04-02	David Fang		<fangism@users.sourceforge.net>
	Added option to always-show-dynamic-edge between hands.

2012-04-01	David Fang		<fangism@users.sourceforge.net>
	Added bookmarking feature to save 'interesting' hands.

2012-03-30	David Fang		<fangism@users.sourceforge.net>